fixed home page overflow issue

--- a/app/assets/stylesheets/pages/_updated-home.scss
+++ b/app/assets/stylesheets/pages/_updated-home.scss
@@ -85,7 +85,7 @@ position: relative;
 }
 
 .different {
-  width: 100vw;
+  width: 100%;
   display: flex;
   justify-content: space-around;
 }
